2009-04-30  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
	allows Tk to keep working even when the graphics card is stressed.

2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure (SC_CONFIG_CFLAGS): harden the check
	to add _r to CC on AIX with threads.

2009-04-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkInt.decls: [Bug 2768945]: Expose (as "private") a set of
	functions needed for easily building canvas items that work like
	existing standard ones.

2009-04-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): no need to set
	cwd on selchange. Prevents delete of selected folder in dialog.

2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Removed stray @ from Makefile.in test target.
	[Bug 2764263], Don't chmod+x square demo. [Bug 1945073],
	Adjustable demo install location. [Patch 2764272]

2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Don't chmod/exec installManPage.
				[Patch 2769530]

2009-04-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (Tk_ChooseDirectoryObjCmd): enable the new
	style choosedir that has a "New Folder" button, with
	::tk::winChooseDirFlags override for new behavior. [Bug 2779910]

2009-04-15  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.7 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.7 release.

2009-04-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4:	Removed -Wno-implicit-int from CFLAGS_WARNING.

2009-04-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.7 release.

	* generic/tk.h:		Bump to 8.5.7 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

2009-04-10  Joe English  <jenglish@users.sourceforge.net

	* library/palette.tcl(tk_setPalette): Don't set 